TS-21 Fixed image border visibility on other resolutions

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -5406,7 +5406,7 @@ header .root {
     background-image: url(/wp-content/themes/twentytwentyfour/assets/images/texture-bg.bbef3745b1be130266a7.svg);
     background-position: 50%;
     background-repeat: no-repeat;
-    background-size: 120% 120%;
+    background-size: 2800px;
     -webkit-filter: contrast(200%);
     filter: contrast(200%);
     opacity: .2
